==> project-chip/connectedhomeip/src/platform/Ameba/DiagnosticDataProviderImpl.cpp <==
#include <platform/internal/CHIPDeviceLayerInternal.h>
#include <crypto/CHIPCryptoPAL.h>
#include <lib/support/CHIPMemString.h>
#include <platform/Ameba/AmebaUtils.h>
#include <platform/Ameba/DiagnosticDataProviderImpl.h>
#include <lwip_netconf.h>

CHIP_ERROR DiagnosticDataProviderImpl::GetCurrentHeapUsed(uint64_t & currentHeapUsed)
{
    currentHeapUsed = xPortGetTotalHeapSize() - xPortGetFreeHeapSize();
    return CHIP_NO_ERROR;
}

CHIP_ERROR DiagnosticDataProviderImpl::GetCurrentHeapHighWatermark(uint64_t & currentHeapHighWatermark)
{
    currentHeapHighWatermark = xPortGetTotalHeapSize() - xPortGetMinimumEverFreeHeapSize();
    return CHIP_NO_ERROR;
}

CHIP_ERROR DiagnosticDataProviderImpl::GetNetworkInterfaces(NetworkInterface ** netifpp)
{
    CHIP_ERROR err          = CHIP_ERROR_READ_FAILED;
    NetworkInterface * head = NULL;
    struct ifaddrs * ifaddr = nullptr;

    // xnetif is never null, no need to check. If we do check with -Werror=address, we get compiler error.
    for (struct netif * ifa = xnetif; ifa != NULL; ifa = ifa->next)
    {
        NetworkInterface * ifp = new NetworkInterface();

        Platform::CopyString(ifp->Name, ifa->name);

        ifp->name          = CharSpan::fromCharString(ifp->Name);
        ifp->isOperational = true;
        if ((ifa->flags) & NETIF_FLAG_ETHERNET)
            ifp->type = app::Clusters::GeneralDiagnostics::InterfaceTypeEnum::kEthernet;
        else
            ifp->type = app::Clusters::GeneralDiagnostics::InterfaceTypeEnum::kWiFi;
        ifp->offPremiseServicesReachableIPv4.SetNull();
        ifp->offPremiseServicesReachableIPv6.SetNull();

        memcpy(ifp->MacAddress, ifa->hwaddr, sizeof(ifa->hwaddr));

        if (0)
        {
            ChipLogError(DeviceLayer, "Failed to get network hardware address");
        }
        else
        {
            // Set 48-bit IEEE MAC Address
            ifp->hardwareAddress = ByteSpan(ifp->MacAddress, 6);
        }

        if (ifa->ip_addr.u_addr.ip4.addr != 0)
        {
            memcpy(ifp->Ipv4AddressesBuffer[0], &(ifa->ip_addr.u_addr.ip4.addr), kMaxIPv4AddrSize);
            ifp->Ipv4AddressSpans[0] = ByteSpan(ifp->Ipv4AddressesBuffer[0], kMaxIPv4AddrSize);
            ifp->IPv4Addresses       = chip::app::DataModel::List<chip::ByteSpan>(ifp->Ipv4AddressSpans, 1);
        }

        // ifa->ip6_addr->u_addr.ip6.addr is never null, no need to check. If we do check with -Werror=address, we get compiler
        // error.
        memcpy(ifp->Ipv6AddressesBuffer[0], &(ifa->ip6_addr->u_addr.ip6.addr), kMaxIPv6AddrSize);
        ifp->Ipv6AddressSpans[0] = ByteSpan(ifp->Ipv6AddressesBuffer[0], kMaxIPv6AddrSize);
        ifp->IPv6Addresses       = chip::app::DataModel::List<chip::ByteSpan>(ifp->Ipv6AddressSpans, 1);

        ifp->Next = head;
        head      = ifp;
    }

    *netifpp = head;
    return CHIP_NO_ERROR;
}

CHIP_ERROR DiagnosticDataProviderImpl::GetWiFiBssId(MutableByteSpan & BssId)
{
    CHIP_ERROR err;
    int32_t error;

    constexpr size_t bssIdSize = 6;
    VerifyOrReturnError(BssId.size() >= bssIdSize, CHIP_ERROR_BUFFER_TOO_SMALL);

    error = matter_wifi_get_ap_bssid(BssId.data());
    err   = AmebaUtils::MapError(error, AmebaErrorType::kWiFiError);

    if (err != CHIP_NO_ERROR)
    {
        return err;
    }

    BssId.reduce_size(bssIdSize);
    ChipLogProgress(DeviceLayer, "%02x,%02x,%02x,%02x,%02x,%02x\n", BssId.data()[0], BssId.data()[1], BssId.data()[2],
                    BssId.data()[3], BssId.data()[4], BssId.data()[5]);

    return err;
}

CHIP_ERROR DiagnosticDataProviderImpl::GetWiFiSecurityType(app::Clusters::WiFiNetworkDiagnostics::SecurityTypeEnum & securityType)
{
    CHIP_ERROR err;
    int32_t error;

    using app::Clusters::WiFiNetworkDiagnostics::SecurityTypeEnum;

    unsigned int _auth_type;
    unsigned short security = 0;
    rtw_wifi_setting_t setting;

    error = matter_wifi_get_security_type(WLAN0_IDX, &security, &setting.key_idx, setting.password);
    err   = AmebaUtils::MapError(error, AmebaErrorType::kWiFiError);
    if (err != CHIP_NO_ERROR)
    {
        securityType = SecurityTypeEnum::kUnspecified;
    }
#ifdef CONFIG_PLATFORM_8721D
    else
    {
        switch (security)
        {
        case IW_ENCODE_ALG_NONE:
            securityType = SecurityTypeEnum::kNone;
            break;
        case IW_ENCODE_ALG_WEP:
            securityType = SecurityTypeEnum::kWep;
            break;
        case IW_ENCODE_ALG_TKIP:
            securityType = SecurityTypeEnum::kWpa;
            break;
        case IW_ENCODE_ALG_CCMP:
            securityType = SecurityTypeEnum::kWpa2;
            break;
        default:
            securityType = SecurityTypeEnum::kUnspecified;
            break;
        }
    }
#else
    else
    {
        switch (security)
        {
        case IW_ENCODE_ALG_NONE:
            securityType = SecurityTypeEnum::kNone;
            break;
        case IW_ENCODE_ALG_WEP:
            securityType = SecurityTypeEnum::kWep;
            break;
        case IW_ENCODE_ALG_TKIP:
            if (_auth_type == WPA_SECURITY)
                securityType = SecurityTypeEnum::kWpa;
            else if (_auth_type == WPA2_SECURITY)
                securityType = SecurityTypeEnum::kWpa2;
            break;
        case IW_ENCODE_ALG_CCMP:
            if (_auth_type == WPA_SECURITY)
                securityType = SecurityTypeEnum::kWpa;
            else if (_auth_type == WPA2_SECURITY)
                securityType = SecurityTypeEnum::kWpa2;
            else if (_auth_type == WPA3_SECURITY)
                securityType = SecurityTypeEnum::kWpa3;
            break;
        default:
            securityType = SecurityTypeEnum::kUnspecified;
            break;
        }
    }
#endif

    return err;
}

CHIP_ERROR DiagnosticDataProviderImpl::GetWiFiChannelNumber(uint16_t & channelNumber)
{
    CHIP_ERROR err;
    int32_t error;
    unsigned char channel;

    error = matter_wifi_get_wifi_channel_number(WLAN0_IDX, &channel);
    err   = AmebaUtils::MapError(error, AmebaErrorType::kWiFiError);
    if (err != CHIP_NO_ERROR)
        channelNumber = 0;
    else
        channelNumber = (uint16_t) channel;

    return err;
}

CHIP_ERROR DiagnosticDataProviderImpl::GetWiFiRssi(int8_t & rssi)
{
    CHIP_ERROR err;
    int32_t error;

    error = matter_wifi_get_rssi((int *) &rssi);
    err   = AmebaUtils::MapError(error, AmebaErrorType::kWiFiError);

    if (err != CHIP_NO_ERROR)
    {
        // set rssi to 0 upon error
        rssi = 0;
    }

    return err;
}
